scripts/nullaway/wpi/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8.txt
../wpi/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:135: error: [NullAway] dereferenced expression Main.hashmap.get(Main.byteToString(result.get(0).getHash())) is @Nullable
            System.out.println(s2.getSentence(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap()));
                                                                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:136: error: [NullAway] dereferenced expression Main.hashmap.get(Main.byteToString(result.get(0).getHash())) is @Nullable
            System.out.println(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap());
                                                                                           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
